@@ -3,6 +3,7 @@
 
 2007 (most recent donators first):
 
+* Cillian de Roiste (2x)
 * David Thompson
 * Christian Walther
 * Ivo-Jose Jimenez-Ramos
@@ -19,7 +20,6 @@
 * Stefan Krauth
 * Robert Heckel
 * Miron Tewfik
-* Cillian de Roiste
 * Sjoerd Siebinga
 * Ben Klemens
 * Andrew Pantyukhin
